mobile fixes: Scroll targets were hidden by search, examples resize when stacked.

--- a/wiki/.vuepress/styles/index.styl
+++ b/wiki/.vuepress/styles/index.styl
@@ -519,4 +519,19 @@ table tr:last-child td:last-child {
   .page {
     padding-top: 4rem;
   }  
+
+  .theme-default-content:not(.custom) {
+    h2 {
+      padding-top: 8rem;
+      margin-top: -5rem;
+    }  
+  }
+
+  .examples .example {
+    width: 100%;
+
+    h2 {
+      margin-top: -8rem;
+    }
+  }
 }
